--- a/MyMusicStashWeb/MyMusicStashWeb/Content/Site.css
+++ b/MyMusicStashWeb/MyMusicStashWeb/Content/Site.css
@@ -20,85 +20,98 @@
 input,
 select,
 textarea {
-	max-width: 280px;
+	max-width: 350px;
 }
 
 /*    --------------------------------------------------
 	:: Login Section
 	-------------------------------------------------- */
 #login {
-	padding-top: 50px
+	padding-top: 50px;
 }
-#login .form-wrap {
-	width: 30%;
-	margin: 0 auto;
-}
-#login h1 {
-	color: #e6e6e6;
-	font-size: 18px;
-	text-align: center;
-	font-weight: bold;
-	padding-bottom: 20px;
-}
-#login .form-group {
-	margin-bottom: 25px;
-}
-#login .checkbox {
-	margin-bottom: 20px;
-	position: relative;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	-o-user-select: none;
-	user-select: none;
-}
-#login .checkbox.show:before {
-	content: '\e013';
-	color: #1fa67b;
-	font-size: 17px;
-	margin: 1px 0 0 3px;
-	position: absolute;
-	pointer-events: none;
-	font-family: 'Glyphicons Halflings';
-}
-#login .checkbox .character-checkbox {
-	width: 25px;
-	height: 25px;
-	cursor: pointer;
-	border-radius: 3px;
-	border: 1px solid #ccc;
-	vertical-align: middle;
-	display: inline-block;
-}
-#login .checkbox .label {
-	color: #6d6d6d;
-	font-size: 13px;
-	font-weight: normal;
-}
-#login .btn.btn-custom {
-	font-size: 14px;
-	margin-bottom: 20px;
-}
-#login .forget {
-	font-size: 13px;
-	text-align: center;
-	display: block;
-}
+
+	#login .form-wrap {
+		width: 20%;
+		margin: 0 auto;
+	}
+
+	#login h1 {
+		color: #e6e6e6;
+		font-size: 18px;
+		font-weight: bold;
+		padding-bottom: 20px;
+		text-align: center;
+	}
+
+	#login .form-group {
+		margin-bottom: 25px;
+	}
+
+	#login .checkbox {
+		margin-bottom: 20px;
+		position: relative;
+		-webkit-user-select: none;
+		-moz-user-select: none;
+		-ms-user-select: none;
+		-o-user-select: none;
+		user-select: none;
+	}
+
+		#login .checkbox.show:before {
+			content: '\e013';
+			color: #1fa67b;
+			font-size: 17px;
+			margin: 1px 0 0 3px;
+			position: absolute;
+			pointer-events: none;
+			font-family: 'Glyphicons Halflings';
+		}
+
+		#login .checkbox .character-checkbox {
+			width: 25px;
+			height: 25px;
+			cursor: pointer;
+			border-radius: 3px;
+			border: 1px solid #ccc;
+			vertical-align: middle;
+			display: inline-block;
+		}
+
+		#login .checkbox .label {
+			color: #6d6d6d;
+			font-size: 13px;
+			font-weight: normal;
+		}
+
+	#login .btn.btn-custom {
+		text-align: center;
+		font-size: 14px;
+		margin-bottom: 20px;
+	}
+
+	#login .forget {
+		font-size: 13px;
+		text-align: center;
+		display: block;
+	}
 
 /*    --------------------------------------------------
 	:: Inputs & Buttons
 	-------------------------------------------------- */
 .form-control {
 	color: #212121;
+	text-align: center;
 }
+
 .btn-custom {
 	color: #fff;
 	background-color: #a9a9a9;
 }
-.btn-custom:hover,
-.btn-custom:focus {
-	color: #fff;
-}
+
+	.btn-custom:hover,
+	.btn-custom:focus {
+		color: #fff;
+	}
 
 /*    --------------------------------------------------
 	:: Footer
@@ -108,9 +121,66 @@ textarea {
 	font-size: 12px;
 	text-align: center;
 }
-#footer p {
-	margin-bottom: 0;
+
+	#footer p {
+		margin-bottom: 0;
+	}
+
+	#footer a {
+		color: inherit;
+	}
+
+/*Register form*/	
+
+legend{
+    color:#141823;
+    font-size:25px;
+    font-weight:bold;
 }
-#footer a {
-	color: inherit;
+.signup-btn {
+    background: #79bc64;
+    background-image: -webkit-linear-gradient(top, #79bc64, #578843);
+    background-image: -moz-linear-gradient(top, #79bc64, #578843);
+    background-image: -ms-linear-gradient(top, #79bc64, #578843);
+    background-image: -o-linear-gradient(top, #79bc64, #578843);
+    background-image: linear-gradient(to bottom, #79bc64, #578843);
+    -webkit-border-radius: 4;
+    -moz-border-radius: 4;
+    border-radius: 4px;
+    text-shadow: 0px 1px 0px #898a88;
+    -webkit-box-shadow: 0px 0px 0px #a4e388;
+    -moz-box-shadow: 0px 0px 0px #a4e388;
+    box-shadow: 0px 0px 0px #a4e388;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    border: solid #3b6e22  1px;
+    text-decoration: none;
+}
+
+.signup-btn:hover {
+    background: #79bc64;
+    background-image: -webkit-linear-gradient(top, #79bc64, #5e7056);
+    background-image: -moz-linear-gradient(top, #79bc64, #5e7056);
+    background-image: -ms-linear-gradient(top, #79bc64, #5e7056);
+    background-image: -o-linear-gradient(top, #79bc64, #5e7056);
+    background-image: linear-gradient(to bottom, #79bc64, #5e7056);
+    text-decoration: none;
+}
+.navbar-default .navbar-brand{
+    color:#fff;
+    font-size:30px;
+    font-weight:bold;
+}
+.form .form-control { margin-bottom: 10px; }
+@media (min-width:768px) {
+    #home{
+        margin-top:50px;
+    }
+    #home .slogan{
+        color: #0e385f;
+        line-height: 29px;
+        font-weight:bold;
+    }
 }
