--- a/MyMusicStashWeb/MyMusicStashWeb/Content/Site.css
+++ b/MyMusicStashWeb/MyMusicStashWeb/Content/Site.css
@@ -133,54 +133,66 @@ textarea {
 /*Register form*/	
 
 legend{
-    color:#141823;
-    font-size:25px;
-    font-weight:bold;
+	color:#141823;
+	font-size:25px;
+	font-weight:bold;
 }
 .signup-btn {
-    background: #79bc64;
-    background-image: -webkit-linear-gradient(top, #79bc64, #578843);
-    background-image: -moz-linear-gradient(top, #79bc64, #578843);
-    background-image: -ms-linear-gradient(top, #79bc64, #578843);
-    background-image: -o-linear-gradient(top, #79bc64, #578843);
-    background-image: linear-gradient(to bottom, #79bc64, #578843);
-    -webkit-border-radius: 4;
-    -moz-border-radius: 4;
-    border-radius: 4px;
-    text-shadow: 0px 1px 0px #898a88;
-    -webkit-box-shadow: 0px 0px 0px #a4e388;
-    -moz-box-shadow: 0px 0px 0px #a4e388;
-    box-shadow: 0px 0px 0px #a4e388;
-    font-family: Arial;
-    color: #ffffff;
-    font-size: 20px;
-    padding: 10px 20px 10px 20px;
-    border: solid #3b6e22  1px;
-    text-decoration: none;
+	background: #79bc64;
+	background-image: -webkit-linear-gradient(top, #79bc64, #578843);
+	background-image: -moz-linear-gradient(top, #79bc64, #578843);
+	background-image: -ms-linear-gradient(top, #79bc64, #578843);
+	background-image: -o-linear-gradient(top, #79bc64, #578843);
+	background-image: linear-gradient(to bottom, #79bc64, #578843);
+	-webkit-border-radius: 4;
+	-moz-border-radius: 4;
+	border-radius: 4px;
+	text-shadow: 0px 1px 0px #898a88;
+	-webkit-box-shadow: 0px 0px 0px #a4e388;
+	-moz-box-shadow: 0px 0px 0px #a4e388;
+	box-shadow: 0px 0px 0px #a4e388;
+	font-family: Arial;
+	color: #ffffff;
+	font-size: 20px;
+	padding: 10px 20px 10px 20px;
+	border: solid #3b6e22  1px;
+	text-decoration: none;
 }
 
 .signup-btn:hover {
-    background: #79bc64;
-    background-image: -webkit-linear-gradient(top, #79bc64, #5e7056);
-    background-image: -moz-linear-gradient(top, #79bc64, #5e7056);
-    background-image: -ms-linear-gradient(top, #79bc64, #5e7056);
-    background-image: -o-linear-gradient(top, #79bc64, #5e7056);
-    background-image: linear-gradient(to bottom, #79bc64, #5e7056);
-    text-decoration: none;
+	background: #79bc64;
+	background-image: -webkit-linear-gradient(top, #79bc64, #5e7056);
+	background-image: -moz-linear-gradient(top, #79bc64, #5e7056);
+	background-image: -ms-linear-gradient(top, #79bc64, #5e7056);
+	background-image: -o-linear-gradient(top, #79bc64, #5e7056);
+	background-image: linear-gradient(to bottom, #79bc64, #5e7056);
+	text-decoration: none;
 }
 .navbar-default .navbar-brand{
-    color:#fff;
-    font-size:30px;
-    font-weight:bold;
+	color:#fff;
+	font-size:30px;
+	font-weight:bold;
 }
 .form .form-control { margin-bottom: 10px; }
 @media (min-width:768px) {
-    #home{
-        margin-top:50px;
-    }
-    #home .slogan{
-        color: #0e385f;
-        line-height: 29px;
-        font-weight:bold;
-    }
+	#home{
+		margin-top:50px;
+	}
+	#home .slogan{
+		color: #0e385f;
+		line-height: 29px;
+		font-weight:bold;
+	}
 }
+
+.colorgraph {
+  height: 5px;
+  border-top: 0;
+  background: #c4e17f;
+  border-radius: 5px;
+  background-image: -webkit-linear-gradient(left, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
+  background-image: -moz-linear-gradient(left, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
+  background-image: -o-linear-gradient(left, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
+  background-image: linear-gradient(to right, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
+}
+
