--- a/MyMusicStashWeb/MyMusicStashWeb/Views/Song/Index.cshtml
+++ b/MyMusicStashWeb/MyMusicStashWeb/Views/Song/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<MyMusicStashWeb.Models.Song>
+﻿@using MyMusicStashWeb.Models
+@model IEnumerable<MyMusicStashWeb.Models.Song>
 
 @{
     ViewBag.Title = "Index";
@@ -67,9 +68,9 @@
             @Html.DisplayFor(modelItem => item.MusicExtension)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            @Html.ActionLink("Edit", "Edit", new { id=item.MusicId  }) |
+            @Html.ActionLink("Details", "Details", new { id=item.MusicId }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.MusicId }) 
         </td>
     </tr>
 }
