--- a/MyMusicStashWeb/MyMusicStashWeb/Content/bootstrap-darkly.css
+++ b/MyMusicStashWeb/MyMusicStashWeb/Content/bootstrap-darkly.css
@@ -7278,3 +7278,12 @@ a.list-group-item-danger.active:focus {
 
 
 }
+
+.navbar-brand {
+  padding: 0px; /* firefox bug fix */
+}
+.navbar-brand>img {
+  height: 100%;
+  padding: 15px; /* firefox bug fix */
+  width: auto;
+}
