--- a/MyMusicStashWeb/MyMusicStashWeb/Views/Song/Index.cshtml
+++ b/MyMusicStashWeb/MyMusicStashWeb/Views/Song/Index.cshtml
@@ -14,9 +14,9 @@
 <table class="table">
     <tr>
 
-        <th>
+        @*<th>
             AccountID
-        </th>
+        </th>*@
         <th>
             Source
         </th>
@@ -43,9 +43,9 @@
 
 @foreach (var item in Model) {
     <tr>
-        <td>
+        @*<td>
             @Html.DisplayFor(modelItem => item.AccountId)
-        </td>
+        </td>*@
         <td>
             @Html.DisplayFor(modelItem => item.MusicType)
         </td>
@@ -69,7 +69,7 @@
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.MusicId  }) |
-            @Html.ActionLink("Details", "Details", new { id=item.MusicId }) |
+            @*@Html.ActionLink("Details", "Details", new { id=item.MusicId }) |*@
             @Html.ActionLink("Delete", "Delete", new { id=item.MusicId }) 
         </td>
     </tr>
