--- a/MyMusicStashWeb/MyMusicStashWeb/Views/Shared/_Layout.cshtml
+++ b/MyMusicStashWeb/MyMusicStashWeb/Views/Shared/_Layout.cshtml
@@ -44,6 +44,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Login", "Login", "Account")</li>
                     <li>@Html.ActionLink("Register", "Create", "Account")</li>
+                    <li>@Html.ActionLink("Activate", "Activate", "Account")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 }
