--- a/MyMusicStashWeb/MyMusicStashWeb/Views/Account/Login.cshtml
+++ b/MyMusicStashWeb/MyMusicStashWeb/Views/Account/Login.cshtml
@@ -29,7 +29,20 @@
                             <input type="submit" id="btn-login" class="btn btn-custom btn-lg btn-block" value="Log in">
                         </form>
                         @*<a href="javascript:;" class="forget" data-toggle="modal" data-target=".forget-modal">Forgot your password?</a>*@
-                        <a href="javascript:;" class="forget" data-toggle="modal" data-target=".forget-modal">No Account? Register Today!</a>
+                        <div>
+                            @if (TempData["Login"] != null)
+                            {
+                                <div class="alert alert-danger alert-autocloseable-danger">
+                                    Error: You have entered wrong information. Please try again. 
+                                </div>
+                            }
+                            @if (TempData["NotActivated"] != null)
+                            {
+                                <div class="alert alert-danger alert-autocloseable-danger">
+                                    Error: Your account has not been activated. Please activate your account.
+                                </div>
+                            }
+                        </div>
                     </div>
                 </div> <!-- /.col-xs-12 -->
 
