--- a/MyMusicStashWeb/MyMusicStashWeb/Views/Post/Index.cshtml
+++ b/MyMusicStashWeb/MyMusicStashWeb/Views/Post/Index.cshtml
@@ -13,13 +13,13 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.AccountId)
+            @Html.DisplayNameFor(model => model.Username1)
         </th>
+        @*<th>
+            @Html.DisplayNameFor(model => model.AccountId)
+        </th>*@
         <th>
             @Html.DisplayNameFor(model => model.Posttext)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Username1)
         </th>
         <th></th>
     </tr>
@@ -27,18 +27,18 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.AccountId)
+            @Html.DisplayFor(modelItem => item.Username1)
         </td>
+        @*<td>
+            @Html.DisplayFor(modelItem => item.AccountId)
+        </td>*@
         <td>
             @Html.DisplayFor(modelItem => item.Posttext)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Username1)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.PostId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.PostId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.PostId })
+            @Html.ActionLink("Edit", "Edit", new {id = item.PostId}) |
+            @Html.ActionLink("Reactions", "Reactions", new {id = item.PostId}) |
+            @Html.ActionLink("Delete", "Delete", new {id = item.PostId})
         </td>
     </tr>
 }
