--- a/MyMusicStashWeb/MyMusicStashWeb/Views/Shared/_navbarUser.cshtml
+++ b/MyMusicStashWeb/MyMusicStashWeb/Views/Shared/_navbarUser.cshtml
@@ -1,19 +1,4 @@
-﻿@using System.Web.UI.WebControls
-@using MyMusicStashWeb.Controllers
-@using MyMusicStashWeb.Models
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <link rel="shortcut icon" type="image/x-icon" href="~/favicon.ico" />
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - MyMusicStash - Welcome</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
-
-</head>
-<body>
-<div class="navbar navbar-inverse navbar-fixed-top">
+﻿<div class="navbar navbar-inverse navbar-fixed-top">
     <a href="#" class="navbar-brand"><img src="http://i.imgur.com/LNcAPNO.png"></a>
     <div class="container">
         <div class="navbar-header">
@@ -22,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            
+
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -35,7 +20,7 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li class="navbar-right">@Session["Username"]</li>
-                        @*<li class="navbar-right"> <a href="#">@Session["UserID"]</a></li>*@
+                    @*<li class="navbar-right"> <a href="#">@Session["UserID"]</a></li>*@
                     <li><a href='@Url.Action("LogOut", "Account")'>Log Out</a></li>
                 }
                 else
@@ -52,16 +37,3 @@
         </div>
     </div>
 </div>
-<div class="container body-content">
-    @RenderBody()
-    <hr/>
-    <footer>
-        <p>&copy; @DateTime.Now.Year - MyMusicStash</p>
-    </footer>
-</div>
-
-@Scripts.Render("~/bundles/jquery")
-@Scripts.Render("~/bundles/bootstrap")
-@RenderSection("scripts", required: false)
-</body>
-</html>
