--- a/MyMusicStashWeb/MyMusicStashWeb/Views/Song/Index.cshtml
+++ b/MyMusicStashWeb/MyMusicStashWeb/Views/Song/Index.cshtml
@@ -9,7 +9,10 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Add New", "Create")
+</p>
+<p>
+    @Html.ActionLink("Add New Random Song", "CreateRandom")
 </p>
 <table class="table">
     <tr>
