--- a/MyMusicStashWeb/MyMusicStashWeb/Content/bootstrap-darkly.css
+++ b/MyMusicStashWeb/MyMusicStashWeb/Content/bootstrap-darkly.css
@@ -4964,7 +4964,7 @@ a.badge:focus {
   padding-bottom: 30px;
   margin-bottom: 30px;
   color: inherit;
-  background-color: #1c1e22;
+  background-color: #FFFFFF;
 }
 .jumbotron h1,
 .jumbotron .h1 {
