--- a/MyMusicStashWeb/MyMusicStashWeb/Views/Post/Edit.cshtml
+++ b/MyMusicStashWeb/MyMusicStashWeb/Views/Post/Edit.cshtml
@@ -7,6 +7,13 @@
 
 <h2>Edit</h2>
 
+@if (TempData["InvalidRights"] != null)
+{
+    <div class="alert alert-danger alert-autocloseable-danger">
+        Error: This is not your post.
+    </div>
+}
+
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
