Unit test aangemaakt, veranderingen aan media en post controllers.

--- a/MyMusicStashWeb/MyMusicStashWeb/Views/Post/Index.cshtml
+++ b/MyMusicStashWeb/MyMusicStashWeb/Views/Post/Index.cshtml
@@ -38,7 +38,8 @@
         <td>
             @Html.ActionLink("Edit", "Edit", new {id = item.PostId}) |
             @Html.ActionLink("Reactions", "Reactions", new {id = item.PostId}) |
-            @Html.ActionLink("Delete", "Delete", new {id = item.PostId})
+            @Html.ActionLink("Delete", "Delete", new { id = item.PostId }) |
+            @Html.ActionLink("Create New Reaction", "CreateReaction", new { id = item.PostId })
         </td>
     </tr>
 }
