--- a/MyMusicStashWeb/MyMusicStashWeb/Views/Shared/_Layout.cshtml
+++ b/MyMusicStashWeb/MyMusicStashWeb/Views/Shared/_Layout.cshtml
@@ -35,20 +35,25 @@
                     <li>@Html.ActionLink("My Account", "Index", "Account")</li>
                     <li>@Html.ActionLink("My Details", "Index", "Person")</li>
                     <ul class="nav navbar-nav navbar-right"><li>@Session["Username"]</li></ul>
-                        @*<li class="navbar-right"> <a href="#">@Session["UserID"]</a></li>*@
+                    @*<li class="navbar-right"> <a href="#">@Session["UserID"]</a></li>*@
                     <li><a href='@Url.Action("LogOut", "Account")'>Log Out</a></li>
-                    
-                }
 
+                }
                 else
                 {
-                    <li class="navbar-brand">@Html.ActionLink("MyMusicStash", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Login", "Login", "Account")</li>
-                    <li>@Html.ActionLink("Register", "Create", "Account")</li>
-                    <li>@Html.ActionLink("Activate", "Activate", "Account")</li>
+                <li class="navbar-brand">@Html.ActionLink("MyMusicStash", "Index", "Home")</li>
+                <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                <li>@Html.ActionLink("Login", "Login", "Account")</li>
+                <li>@Html.ActionLink("Register", "Create", "Account")</li>
+                <li>@Html.ActionLink("Activate", "Activate", "Account")</li>
+                }
+                
+                @if (Session["Admin"] != null)
+                {
+                <li>@Html.ActionLink("All Accounts", "IndexAllAccounts", "Account")</li>
                 }
             </ul>
+
         </div>
     </div>
 </div>
