--- a/MyMusicStashWeb/MyMusicStashWeb/Views/Media/Delete.cshtml
+++ b/MyMusicStashWeb/MyMusicStashWeb/Views/Media/Delete.cshtml
@@ -8,6 +8,15 @@
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
+
+
+@if (TempData["InvalidRights"] != null)
+{
+    <div class="alert alert-danger alert-autocloseable-danger">
+        Error: This is not your media.
+    </div>
+}
+
 <div>
     <h4>Media</h4>
     <hr />
