--- a/MyMusicStashWeb/MyMusicStashWeb/Views/Post/CreateReaction.cshtml
+++ b/MyMusicStashWeb/MyMusicStashWeb/Views/Post/CreateReaction.cshtml
@@ -1,11 +1,11 @@
 ﻿@model MyMusicStashWeb.Models.Reaction
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "CreateReaction";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Create</h2>
+<h2>CreateReaction</h2>
 
 @using (Html.BeginForm()) 
 {
@@ -14,16 +14,6 @@
     <div class="form-horizontal">
         <h4>Reaction</h4>
         <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.PostId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.PostId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PostId, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
         <div class="form-group">
             @Html.LabelFor(model => model.Post, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
